[package]
name = "nix-script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
clap = { version = "3.1.5", features = [ "std", "color", "suggestions", "derive", "cargo" ] }
log = "0.4.14"
env_logger = "0.9.0"
