[package]
name = "nix-script"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
clap = { version = "3.1.5", features = [ "std", "color", "suggestions", "derive", "cargo", "env" ] }
directories = "4.0.1"
lazy_static = "1.4.0"
log = "0.4.14"
env_logger = "0.9.0"
rnix = "0.10.1"
once_cell = "1.10.0"
path-absolutize = "3.0.12"
serde = { version = "1.0.136", features = [ "derive" ] }
serde_json = "1.0.79"
tempfile = "3.3.0"
