[package]
name = "nix-script-haskell"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.12", features = [ "std", "color", "suggestions", "derive", "cargo", "env" ] }
directives = { path = "../directives" }
log = "0.4.17"
env_logger = "0.9.1"

[dev-dependencies]
assert_cmd = "2.0.4"
