[package]
name = "nix-script-haskell"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "3.2.23", features = [ "std", "color", "suggestions", "derive", "cargo", "env" ] }
directives = { path = "../directives" }
log = "0.4.17"
env_logger = "0.10.0"

[dev-dependencies]
assert_cmd = "2.0.10"
