[package]
name = "nix-script-haskell"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "3.2.25", features = [ "std", "color", "suggestions", "derive", "cargo", "env" ] }
directives = { path = "../directives" }
log = "0.4.20"
env_logger = "0.10.2"

[dev-dependencies]
assert_cmd = "2.0.13"
