[package]
name = "nix-script"
version = "2.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = [ "std", "color", "suggestions", "derive", "cargo", "env" ] }
directories = "5.0.1"
directives = { path = "../directives" }
fs2 = "0.4.3"
lazy_static = "1.5.0"
log = "0.4.22"
env_logger = "0.11.5"
once_cell = "1.19.0"
path-absolutize = "3.1.1"
seahash = "4.1.0"
serde_json = "1.0.120"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.15"
rnix = "0.11.0"
tempfile = "3.10.1"
